--- a/index.html
+++ b/index.html
@@ -165,6 +165,28 @@
          </section>
       
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-column">
+        <h3 class="section-title footer-text">Let's Connect</h3>
+        <p class="section-description footer-text">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+        <div class="social-links">
+          <a href=""><img src="images/icons/facebook.png"></a>
+          <a href=""><img src="images/icons/twitter.png"></a>
+          <a href=""><img src="images/icons/insta.png"></a>
+        </div>
+
+      </div>
+
+      <div class="footer-column">
+        <h3 class="section-title">Let's Message Me</h3>
+        <form class="contact">
+          <input type="text" placeholder="Your Name">
+          <input type="email" placeholder="Your Email">
+          <textarea name="" placeholder="Your message" id="" cols="30" rows="10"></textarea>
+          <input class="btn-primary input_button" type="submit" value="Submit">
+        </form>
+        
+      </div>
+    </footer>
   </body>
 </html>
