--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
         </form>
         
       </div>
+      <div class="icon-align-vertical-distribute-end"></div>
     </footer>
   </body>
 </html>
